##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(groot_icons)

##############################################################################
# Find Packages
##############################################################################

##############################################################################
# Installs
##############################################################################

install(DIRECTORY avatars DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
install(DIRECTORY bubble DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
